[package]
name = "Tokio-IoT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
warp = "0.3.5"
